2011-09-20  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Added new stereo mode options to match
	the current specs. The new options are "anaglyph_green_magenta"
	(12), "both_eyes_laced_left_first" (13) and
	"both_eyes_laced_right_first" (14).

	* mkvmerge: The --stereo-mode named option "anaglyph" was renamed
	to "anaglyph_cyan_red" to match the specs. The numerical value
	(10) remains unchanged.

2011-09-18  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: Fixed attachment number displayed during
	extraction. Fix for bug 663.

	* mkvmerge: enhancement: MPEG TS: Added support for HDMV PGS
	subtitles.

	* mkvmerge: enhancement: MPEG TS: Added support for DTS HD Master
	Audio tracks.

2011-09-17  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: MPEG TS: Streams that are mentioned in
	the PMT but do not actually contain data are neither reported
	during identification nor muxed.

2011-09-14  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: MPEG TS: Added support for reading the
	language code.

2011-09-13  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: Added MPEG transport streams to the "add file"
	dialog file selector.

	* mkvmerge: new feature: MPEG TS: Added support for normal DTS
	tracks.

	* mkvmerge: Tons of fixes and additions to the MPEG transport
	stream demuxer.

2011-09-10  Moritz Bunkus  <moritz@bunkus.org>

	* build system: configure will accept external versions of libEBML
	and libMatroska again. Minimum required versions are libEBML 1.2.1
	and libMatroska 1.1.0.

2011-09-07  DenB  <denb10@free.fr>

	* All: Updated the French translation with a complete set by DenB
	(see AUTHORS).

2011-09-05  Cosme Domínguez  <cosme.ddiaz@gmail.com>

	* mmg: mmg respects the XDG Base Directory Specification regarding
	its configuration files (environment variable
	$XDG_CONFIG_HOME/mkvtoolnix if set, otherwise
	~/.config/mkvtoolnix).

2011-08-24  Moritz Bunkus  <moritz@bunkus.org>
